# HangmanMCPApp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hangman_server/: game.py  server.py  ui.py
tests/: test_game.py
